fix ugly alignment

--- a/src/app/course-list-item/course-list-item.component.scss
+++ b/src/app/course-list-item/course-list-item.component.scss
@@ -8,7 +8,7 @@
   .course-image {
     width: 150px;
     height: 150px;
-    
+    padding: 0.5rem;
    // min-width: 260px;
   }
   
