--- a/src/app/courses/courses.component.scss
+++ b/src/app/courses/courses.component.scss
@@ -8,7 +8,7 @@
 }
 
 .drawer-container {
-  height: calc(100% - 64px);
+ // height: calc(100% - 64px);
 }
 
 .course-card {
